<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">No More Rounding</string>
    <string name="textview_signup_PMC1"><u>회원이 아니신가요?</u></string>
    <string name="textview_signup_PMC2"><u>아이디 또는 비밀번호를 잊으셨나요?</u></string>
    <string name="ex_user_info">조태규 12 수 1234</string>
    <string name="parking_time">주차 시간</string>
    <string name="parking_location">주차 위치</string>
    <string name="ex_parking_time">01:23</string>
    <string name="ex_parking_location">B-04</string>
    <string name="ex_location">단국마트 죽전점</string>
</resources>